--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,5 @@
 body {
     font-family: "Helvetica", Sans-Serif; 
+    margin-right: 40px;
+    margin-left: 40px;
  }
